--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -16,7 +16,7 @@ h1, h2, h3, h4, h5, h6 {
   margin-bottom: 1rem;
   line-height: 1.2;
   font-weight: 600;
-  color: #1E40AF;
+  color: #156E5B;  /* Changed from blue to green */
 }
 
 h1 {
